syntax = "proto3";
package iotcrypto.v2;

message MessageV2 {
  string id = 1;
  string iot_id = 2;
  string crypto_id = 3;
  string message = 4;
  map<string, string> metadata = 5;
}
